# lamco-wayland

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  PUBLICATION-STATUS-2025-12-23.md  README.md
.github/workflows/: ci.yml
crates/lamco-pipewire/: CHANGELOG.md  Cargo.toml  PUBLICATION_PLAN.md  PUBLICATION_STATUS.md  README.md
crates/lamco-pipewire/examples/: basic.rs  multi_monitor.rs  streaming.rs  with_damage.rs
crates/lamco-pipewire/src/: bitrate.rs  buffer.rs  config.rs  connection.rs  coordinator.rs  cursor.rs  damage.rs  error.rs  ffi.rs  format.rs  frame.rs  lib.rs  manager.rs  pw_thread.rs  stream.rs  thread_comm.rs  yuv.rs
crates/lamco-portal/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/lamco-portal/examples/: basic.rs  config.rs  input.rs
crates/lamco-portal/src/: clipboard.rs  clipboard_sink.rs  config.rs  dbus_clipboard.rs  error.rs  lib.rs  remote_desktop.rs  screencast.rs  session.rs
crates/lamco-video/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLICATION_REVIEW.md  README.md
crates/lamco-video/examples/: basic.rs
crates/lamco-video/src/: converter.rs  dispatcher.rs  lib.rs  processor.rs
src/: lib.rs
