[workspace]
members = ["crates/*"]
resolver = "2"

# ============================================================================
# WORKSPACE PACKAGE METADATA
# Shared configuration inherited by all workspace crates via `field.workspace = true`
# See: https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
# ============================================================================

[workspace.package]
# Rust edition - 2021 is current stable
edition = "2021"

# Minimum Supported Rust Version
# Determined by dependency chain: zbus requires 1.77, ashpd requires 1.75
rust-version = "1.77"

# Dual license (permissive, industry standard)
license = "MIT OR Apache-2.0"

# Organization URLs
homepage = "https://lamco.ai"
repository = "https://github.com/lamco-admin/lamco-wayland"

# Primary author/maintainer
authors = ["Greg Lamberson <greg@lamco.io>"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
invalid_reference_casting = "warn"
unused_unsafe = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Unsafe code
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
missing_safety_doc = "warn"

# Correctness
as_conversions = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
unwrap_used = "warn"
panic = "warn"

# Style and readability
similar_names = "warn"
wildcard_imports = "warn"

# Performance
large_futures = "warn"
rc_buffer = "warn"
or_fun_call = "warn"
