[package]
# ============================================================================
# PACKAGE IDENTITY
# ============================================================================
name = "lamco-portal"
version = "0.1.0"

# ============================================================================
# INHERITED FROM WORKSPACE
# These fields use workspace values for consistency across all lamco-wayland crates
# ============================================================================
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# ============================================================================
# CRATE-SPECIFIC METADATA
# ============================================================================
description = "XDG Desktop Portal integration for Wayland screen capture and input control"
documentation = "https://docs.rs/lamco-portal"
readme = "README.md"

# Keywords for crates.io search (max 5, max 20 chars each)
keywords = ["wayland", "portal", "screencast", "pipewire", "screen-capture"]

# Categories for crates.io browsing (max 5)
# See: https://crates.io/category_slugs
categories = [
    "api-bindings",        # Idiomatic wrapper for XDG portal APIs
    "os::unix-apis",       # Linux/Unix specific functionality
    "multimedia::video",   # Screen capture relates to video
    "asynchronous",        # Async/await API design
]

# ============================================================================
# PUBLISHING CONFIGURATION
# ============================================================================

# Files to exclude from the published crate (reduces download size)
exclude = [
    "/.github/",
    "/tests/",
    "*.orig",
    "*.original",
    "*.bak",
]

# ============================================================================
# BADGES (maintenance status)
# ============================================================================
[badges]
maintenance = { status = "actively-developed" }

# ============================================================================
# LINTS
# ============================================================================
[lints]
workspace = true

[dependencies]
# Portal and D-Bus integration
ashpd = "0.12.0"
zbus = "4.0"

# Async runtime
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# For bitflags (transitive from ashpd but used explicitly)
enumflags2 = "0.7"

# For FD operations
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
