[package]
# ============================================================================
# PACKAGE IDENTITY
# ============================================================================
name = "lamco-portal"
version = "0.1.1"

# ============================================================================
# PACKAGE CONFIGURATION (will use workspace inheritance when added to workspace)
# ============================================================================
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
homepage = "https://lamco.ai"
repository = "https://github.com/lamco-admin/lamco-wayland"
authors = ["Greg Lamberson <greg@lamco.io>"]

# ============================================================================
# CRATE-SPECIFIC METADATA
# ============================================================================
description = "XDG Desktop Portal integration for Wayland screen capture and input control"
documentation = "https://docs.rs/lamco-portal"
readme = "README.md"

# Keywords for crates.io search (max 5, max 20 chars each)
keywords = ["wayland", "portal", "screencast", "pipewire", "screen-capture"]

# Categories for crates.io browsing (max 5)
# See: https://crates.io/category_slugs
categories = [
    "api-bindings",        # Wrapper around D-Bus portal interfaces
    "os::unix-apis",       # Linux/Unix specific functionality
    "asynchronous",        # Async/await API design
]

# ============================================================================
# PUBLISHING CONFIGURATION
# ============================================================================

# Files to exclude from the published crate (reduces download size)
exclude = [
    "/.github/",
    "/tests/",
    "*.orig",
    "*.original",
    "*.bak",
]

# ============================================================================
# BADGES (maintenance status)
# ============================================================================
[badges]
maintenance = { status = "actively-developed" }

# ============================================================================
# DOCS.RS CONFIGURATION
# ============================================================================
[package.metadata.docs.rs]
# Build docs with all features enabled for comprehensive documentation
all-features = true
# docs.rs is Linux-only, which matches our target
targets = ["x86_64-unknown-linux-gnu"]
# Enable docsrs cfg for conditional documentation
rustdoc-args = ["--cfg", "docsrs"]

# ============================================================================
# LINTS
# Matches lamco-wayland workspace standards for consistency
# Will use `[lints] workspace = true` when added to workspace
# ============================================================================
[lints.rust]
# No unsafe code in this crate - pure async D-Bus operations
unsafe_code = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[lints.clippy]
# Correctness
as_conversions = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
unwrap_used = "warn"
panic = "warn"

# Style and readability
similar_names = "warn"
wildcard_imports = "warn"

# Performance
large_futures = "warn"
rc_buffer = "warn"
or_fun_call = "warn"

# Relaxed lints appropriate for this crate
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# ============================================================================
# FEATURES
# ============================================================================
[features]
default = []
# Enable ClipboardSink trait implementation for lamco-clipboard-core integration
clipboard-sink = ["lamco-clipboard-core"]
# Enable D-Bus clipboard bridge for GNOME fallback (SelectionOwnerChanged workaround)
dbus-clipboard = []

# ============================================================================
# DEPENDENCIES
# ============================================================================
[dependencies]
# Portal and D-Bus integration
ashpd = "0.12.0"
zbus = "4.0"

# Async runtime
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# For bitflags (transitive from ashpd but used explicitly)
enumflags2 = "0.7"

# Optional: ClipboardSink trait implementation
lamco-clipboard-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
