[package]
# ============================================================================
# PACKAGE IDENTITY
# ============================================================================
name = "lamco-portal"
version = "0.2.1"

# ============================================================================
# PACKAGE CONFIGURATION (inherited from workspace)
# ============================================================================
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# ============================================================================
# CRATE-SPECIFIC METADATA
# ============================================================================
description = "XDG Desktop Portal integration for Wayland screen capture and input control"
documentation = "https://docs.rs/lamco-portal"
readme = "README.md"

# Keywords for crates.io search (max 5, max 20 chars each)
keywords = ["wayland", "portal", "screencast", "pipewire", "screen-capture"]

# Categories for crates.io browsing (max 5)
# See: https://crates.io/category_slugs
categories = [
    "api-bindings",        # Wrapper around D-Bus portal interfaces
    "os::unix-apis",       # Linux/Unix specific functionality
    "asynchronous",        # Async/await API design
]

# ============================================================================
# PUBLISHING CONFIGURATION
# ============================================================================

# Files to exclude from the published crate (reduces download size)
exclude = [
    "/.github/",
    "/tests/",
    "*.orig",
    "*.original",
    "*.bak",
]

# ============================================================================
# BADGES (maintenance status)
# ============================================================================
[badges]
maintenance = { status = "actively-developed" }

# ============================================================================
# DOCS.RS CONFIGURATION
# ============================================================================
[package.metadata.docs.rs]
# Build docs with all features enabled for comprehensive documentation
all-features = true
# docs.rs is Linux-only, which matches our target
targets = ["x86_64-unknown-linux-gnu"]
# Enable docsrs cfg for conditional documentation
rustdoc-args = ["--cfg", "docsrs"]

# ============================================================================
# LINTS (inherited from workspace)
# ============================================================================
[lints]
workspace = true

# ============================================================================
# FEATURES
# ============================================================================
[features]
default = []
# Enable ClipboardSink trait implementation for lamco-clipboard-core integration
clipboard-sink = ["lamco-clipboard-core"]
# Enable D-Bus clipboard bridge for GNOME fallback (SelectionOwnerChanged workaround)
dbus-clipboard = []

# ============================================================================
# DEPENDENCIES
# ============================================================================
[dependencies]
# Portal and D-Bus integration
ashpd = "0.12.0"
zbus = "4.0"

# Async runtime
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# For bitflags (transitive from ashpd but used explicitly)
enumflags2 = "0.7"

# Optional: ClipboardSink trait implementation
lamco-clipboard-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
